--- a/styles/sass/_normalize.scss
+++ b/styles/sass/_normalize.scss
@@ -7,3 +7,58 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
 .visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 
 .sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+
+
+// General style rules
+html,
+body {
+    font-family: 'DM Sans', sans-serif;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+a {
+    margin: 0;
+    padding: 0;
+}
+
+.wrapper {
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+p {
+    font-size: 1.2rem;
+    color: rgb(89, 89, 89);
+    line-height: 1.5;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+img {
+    width: 100%;
+}
+
+.getStartedButton {
+    color: #FFF;
+    background-color: rgb(101, 69, 215);
+    padding: 15px 20px;
+    border-radius: 5px;
+    font-weight: 700;
+
+    span {
+        font-weight: 400;
+    }
+}
