--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,3 +243,115 @@ template {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+html,
+body {
+  font-family: "DM Sans", sans-serif;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+a {
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  max-width: 1600px;
+  margin: 0 auto;
+  padding: 50px;
+}
+
+p {
+  font-size: 1.2rem;
+  color: rgb(89, 89, 89);
+  line-height: 1.5;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
+}
+
+.getStartedButton {
+  color: #FFF;
+  background-color: rgb(101, 69, 215);
+  padding: 15px 20px;
+  border-radius: 5px;
+  font-weight: 700;
+}
+.getStartedButton span {
+  font-weight: 400;
+}
+
+header {
+  background: linear-gradient(320deg, rgb(255, 253, 252) 52%, rgb(250, 241, 230) 71%, rgb(238, 215, 248) 100%);
+  min-height: 100vh;
+}
+
+nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 30px;
+     -moz-column-gap: 30px;
+          column-gap: 30px;
+}
+nav a {
+  color: #000;
+}
+
+#headerContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 70px;
+}
+#headerContent #headerPhoto {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+#headerText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+#headerText h1 {
+  font-size: 4.5rem;
+}
