--- a/styles/styles.css
+++ b/styles/styles.css
@@ -285,19 +285,8 @@ img {
   width: 100%;
 }
 
-.getStartedButton {
-  color: #FFF;
-  background-color: rgb(101, 69, 215);
-  padding: 15px 20px;
-  border-radius: 5px;
-  font-weight: 700;
-}
-.getStartedButton span {
-  font-weight: 400;
-}
-
 header {
-  background: linear-gradient(320deg, rgb(255, 253, 252) 52%, rgb(250, 241, 230) 71%, rgb(238, 215, 248) 100%);
+  background: linear-gradient(320deg, rgb(255, 253, 252) 52%, rgb(250, 241, 230) 71%, rgb(237, 203, 246) 100%);
   min-height: 100vh;
 }
 
@@ -353,5 +342,42 @@ nav a {
           flex: 1;
 }
 #headerText h1 {
-  font-size: 4.5rem;
+  font-size: 4.4rem;
+}
+#headerText #headerIndieInfo {
+  font-size: 1.4rem;
+}
+#headerText p > span {
+  color: rgb(101, 69, 215);
+  font-weight: 700;
+}
+
+.getStartedButton {
+  color: #FFF;
+  background-color: rgb(101, 69, 215);
+  padding: 20px;
+  border-radius: 5px;
+  font-weight: 700;
+}
+.getStartedButton span {
+  font-weight: 400;
+}
+
+#resourcesInfo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-column-gap: 180px;
+     -moz-column-gap: 180px;
+          column-gap: 180px;
+}
+#resourcesInfo #resourceSectionText {
+  -webkit-box-flex: 5;
+      -ms-flex: 5;
+          flex: 5;
+}
+#resourcesInfo #resourceSectionImg {
+  -webkit-box-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
 }
